--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,6 +1,6 @@
-m4trace:aclocal.m4:699: -1- AC_SUBST([am__quote])
-m4trace:aclocal.m4:699: -1- AC_SUBST_TRACE([am__quote])
-m4trace:aclocal.m4:699: -1- m4_pattern_allow([^am__quote$])
+m4trace:aclocal.m4:1043: -1- AC_SUBST([am__quote])
+m4trace:aclocal.m4:1043: -1- AC_SUBST_TRACE([am__quote])
+m4trace:aclocal.m4:1043: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:2: -1- AC_INIT([program], [1.0], [shapovalov.denis@lll.kpi.ua])
 m4trace:configure.ac:2: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:2: -1- m4_pattern_forbid([_AC_])
@@ -261,94 +261,197 @@ m4trace:configure.ac:3: -1- AC_SUBST([AM_BACKSLASH])
 m4trace:configure.ac:3: -1- AC_SUBST_TRACE([AM_BACKSLASH])
 m4trace:configure.ac:3: -1- m4_pattern_allow([^AM_BACKSLASH$])
 m4trace:configure.ac:3: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
-m4trace:configure.ac:6: -1- AC_SUBST([CXX])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([CXX])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^CXX$])
-m4trace:configure.ac:6: -1- AC_SUBST([CXXFLAGS])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([CXXFLAGS])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^CXXFLAGS$])
-m4trace:configure.ac:6: -1- AC_SUBST([LDFLAGS])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([LDFLAGS])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^LDFLAGS$])
-m4trace:configure.ac:6: -1- AC_SUBST([LIBS])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([LIBS])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^LIBS$])
-m4trace:configure.ac:6: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:6: -1- AC_SUBST([CXX])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([CXX])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^CXX$])
-m4trace:configure.ac:6: -1- AC_SUBST([ac_ct_CXX])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([ac_ct_CXX])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^ac_ct_CXX$])
-m4trace:configure.ac:6: -1- AC_SUBST([EXEEXT], [$ac_cv_exeext])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([EXEEXT])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^EXEEXT$])
-m4trace:configure.ac:6: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([OBJEXT])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^OBJEXT$])
-m4trace:configure.ac:6: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([DEPDIR])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^DEPDIR$])
-m4trace:configure.ac:6: -1- AC_SUBST([am__include])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([am__include])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^am__include$])
-m4trace:configure.ac:6: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
-m4trace:configure.ac:6: -1- AC_SUBST([AMDEP_TRUE])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([AMDEP_TRUE])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^AMDEP_TRUE$])
-m4trace:configure.ac:6: -1- AC_SUBST([AMDEP_FALSE])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([AMDEP_FALSE])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^AMDEP_FALSE$])
-m4trace:configure.ac:6: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
-m4trace:configure.ac:6: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
-m4trace:configure.ac:6: -1- AC_SUBST([AMDEPBACKSLASH])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([AMDEPBACKSLASH])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
-m4trace:configure.ac:6: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
-m4trace:configure.ac:6: -1- AC_SUBST([am__nodep])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([am__nodep])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^am__nodep$])
-m4trace:configure.ac:6: -1- _AM_SUBST_NOTMAKE([am__nodep])
-m4trace:configure.ac:6: -1- AC_SUBST([CXXDEPMODE], [depmode=$am_cv_CXX_dependencies_compiler_type])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([CXXDEPMODE])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^CXXDEPMODE$])
-m4trace:configure.ac:6: -1- AM_CONDITIONAL([am__fastdepCXX], [
+m4trace:configure.ac:4: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
+m4trace:configure.ac:4: -1- m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
+m4trace:configure.ac:4: -1- m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
+m4trace:configure.ac:4: -1- AC_SUBST([PKG_CONFIG])
+m4trace:configure.ac:4: -1- AC_SUBST_TRACE([PKG_CONFIG])
+m4trace:configure.ac:4: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:4: -1- AC_SUBST([PKG_CONFIG_PATH])
+m4trace:configure.ac:4: -1- AC_SUBST_TRACE([PKG_CONFIG_PATH])
+m4trace:configure.ac:4: -1- m4_pattern_allow([^PKG_CONFIG_PATH$])
+m4trace:configure.ac:4: -1- AC_SUBST([PKG_CONFIG_LIBDIR])
+m4trace:configure.ac:4: -1- AC_SUBST_TRACE([PKG_CONFIG_LIBDIR])
+m4trace:configure.ac:4: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
+m4trace:configure.ac:4: -1- AC_SUBST([PKG_CONFIG])
+m4trace:configure.ac:4: -1- AC_SUBST_TRACE([PKG_CONFIG])
+m4trace:configure.ac:4: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:5: -1- AC_SUBST([PROGRAM_CFLAGS])
+m4trace:configure.ac:5: -1- AC_SUBST_TRACE([PROGRAM_CFLAGS])
+m4trace:configure.ac:5: -1- m4_pattern_allow([^PROGRAM_CFLAGS$])
+m4trace:configure.ac:5: -1- AC_SUBST([PROGRAM_LIBS])
+m4trace:configure.ac:5: -1- AC_SUBST_TRACE([PROGRAM_LIBS])
+m4trace:configure.ac:5: -1- m4_pattern_allow([^PROGRAM_LIBS$])
+m4trace:configure.ac:6: -1- AC_SUBST([GTEST_CFLAGS])
+m4trace:configure.ac:6: -1- AC_SUBST_TRACE([GTEST_CFLAGS])
+m4trace:configure.ac:6: -1- m4_pattern_allow([^GTEST_CFLAGS$])
+m4trace:configure.ac:6: -1- AC_SUBST([GTEST_LIBS])
+m4trace:configure.ac:6: -1- AC_SUBST_TRACE([GTEST_LIBS])
+m4trace:configure.ac:6: -1- m4_pattern_allow([^GTEST_LIBS$])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_GTEST_GTEST_H], [/* Define to 1 if you have the <gtest/gtest.h> header file. */
+@%:@undef HAVE_GTEST_GTEST_H])
+m4trace:configure.ac:7: -1- AC_SUBST([CC])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:7: -1- AC_SUBST([CFLAGS])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([CFLAGS])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^CFLAGS$])
+m4trace:configure.ac:7: -1- AC_SUBST([LDFLAGS])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([LDFLAGS])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^LDFLAGS$])
+m4trace:configure.ac:7: -1- AC_SUBST([LIBS])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([LIBS])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^LIBS$])
+m4trace:configure.ac:7: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:7: -1- AC_SUBST([CC])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:7: -1- AC_SUBST([CC])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:7: -1- AC_SUBST([CC])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:7: -1- AC_SUBST([CC])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:7: -1- AC_SUBST([ac_ct_CC])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([ac_ct_CC])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^ac_ct_CC$])
+m4trace:configure.ac:7: -1- AC_SUBST([CC])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:7: -1- AC_SUBST([EXEEXT], [$ac_cv_exeext])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([EXEEXT])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^EXEEXT$])
+m4trace:configure.ac:7: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([OBJEXT])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^OBJEXT$])
+m4trace:configure.ac:7: -1- AC_REQUIRE_AUX_FILE([compile])
+m4trace:configure.ac:7: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([DEPDIR])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^DEPDIR$])
+m4trace:configure.ac:7: -1- AC_SUBST([am__include])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([am__include])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^am__include$])
+m4trace:configure.ac:7: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
+m4trace:configure.ac:7: -1- AC_SUBST([AMDEP_TRUE])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([AMDEP_TRUE])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^AMDEP_TRUE$])
+m4trace:configure.ac:7: -1- AC_SUBST([AMDEP_FALSE])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([AMDEP_FALSE])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^AMDEP_FALSE$])
+m4trace:configure.ac:7: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
+m4trace:configure.ac:7: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
+m4trace:configure.ac:7: -1- AC_SUBST([AMDEPBACKSLASH])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([AMDEPBACKSLASH])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
+m4trace:configure.ac:7: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
+m4trace:configure.ac:7: -1- AC_SUBST([am__nodep])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([am__nodep])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^am__nodep$])
+m4trace:configure.ac:7: -1- _AM_SUBST_NOTMAKE([am__nodep])
+m4trace:configure.ac:7: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([CCDEPMODE])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^CCDEPMODE$])
+m4trace:configure.ac:7: -1- AM_CONDITIONAL([am__fastdepCC], [
+  test "x$enable_dependency_tracking" != xno \
+  && test "$am_cv_CC_dependencies_compiler_type" = gcc3])
+m4trace:configure.ac:7: -1- AC_SUBST([am__fastdepCC_TRUE])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([am__fastdepCC_TRUE])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^am__fastdepCC_TRUE$])
+m4trace:configure.ac:7: -1- AC_SUBST([am__fastdepCC_FALSE])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
+m4trace:configure.ac:7: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
+m4trace:configure.ac:7: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_STDIO_H], [/* Define to 1 if you have the <stdio.h> header file. */
+@%:@undef HAVE_STDIO_H])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
+@%:@undef HAVE_STDLIB_H])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
+@%:@undef HAVE_STRING_H])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
+@%:@undef HAVE_INTTYPES_H])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
+@%:@undef HAVE_STDINT_H])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
+@%:@undef HAVE_STRINGS_H])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
+@%:@undef HAVE_SYS_STAT_H])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
+@%:@undef HAVE_SYS_TYPES_H])
+m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
+@%:@undef HAVE_UNISTD_H])
+m4trace:configure.ac:7: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:7: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if all of the C90 standard headers exist (not just the ones
+   required in a freestanding environment). This macro is provided for
+   backward compatibility; new code need not use it. */
+@%:@undef STDC_HEADERS])
+m4trace:configure.ac:7: -1- AC_DEFINE_TRACE_LITERAL([HAVE_GTEST_GTEST_H])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^HAVE_GTEST_GTEST_H$])
+m4trace:configure.ac:9: -1- AC_SUBST([CXX])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([CXX])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^CXX$])
+m4trace:configure.ac:9: -1- AC_SUBST([CXXFLAGS])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([CXXFLAGS])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^CXXFLAGS$])
+m4trace:configure.ac:9: -1- AC_SUBST([LDFLAGS])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([LDFLAGS])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^LDFLAGS$])
+m4trace:configure.ac:9: -1- AC_SUBST([LIBS])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([LIBS])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^LIBS$])
+m4trace:configure.ac:9: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:9: -1- AC_SUBST([CXX])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([CXX])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^CXX$])
+m4trace:configure.ac:9: -1- AC_SUBST([ac_ct_CXX])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([ac_ct_CXX])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^ac_ct_CXX$])
+m4trace:configure.ac:9: -1- AC_SUBST([CXXDEPMODE], [depmode=$am_cv_CXX_dependencies_compiler_type])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([CXXDEPMODE])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^CXXDEPMODE$])
+m4trace:configure.ac:9: -1- AM_CONDITIONAL([am__fastdepCXX], [
   test "x$enable_dependency_tracking" != xno \
   && test "$am_cv_CXX_dependencies_compiler_type" = gcc3])
-m4trace:configure.ac:6: -1- AC_SUBST([am__fastdepCXX_TRUE])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([am__fastdepCXX_TRUE])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^am__fastdepCXX_TRUE$])
-m4trace:configure.ac:6: -1- AC_SUBST([am__fastdepCXX_FALSE])
-m4trace:configure.ac:6: -1- AC_SUBST_TRACE([am__fastdepCXX_FALSE])
-m4trace:configure.ac:6: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
-m4trace:configure.ac:6: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
-m4trace:configure.ac:6: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
-m4trace:configure.ac:7: -1- AC_CONFIG_FILES([Makefile])
-m4trace:configure.ac:8: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:8: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:8: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:8: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:8: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:9: -1- AC_SUBST([am__fastdepCXX_TRUE])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([am__fastdepCXX_TRUE])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^am__fastdepCXX_TRUE$])
+m4trace:configure.ac:9: -1- AC_SUBST([am__fastdepCXX_FALSE])
+m4trace:configure.ac:9: -1- AC_SUBST_TRACE([am__fastdepCXX_FALSE])
+m4trace:configure.ac:9: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
+m4trace:configure.ac:9: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
+m4trace:configure.ac:9: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
+m4trace:configure.ac:10: -1- AC_CONFIG_FILES([Makefile])
+m4trace:configure.ac:11: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:11: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:11: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:11: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:11: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:11: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:11: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:11: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:11: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:11: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:11: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([MKDIR_P])
